# Rigid-Body

./: .gitignore  CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: glfw3.lib
shaders/: basic.frag
src/: main.cpp
src/core/: Entity.cpp  Entity.h  Transform.cpp  Transform.h
src/render/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
